<resources>
    <string name="app_name">SmartNutri</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="full_name">Im Yoona</string>
    <string name="home">Home</string>
    <string name="profile_settings">Profile</string>
    <string name="consultation">Konsultasi Gizi</string>
    <string name="menu_list">Daftar Menu Makanan</string>
    <string name="tips">Tips Ibu Hamil</string>
    <string name="help">Help</string>
    <string name="welcome_message">Welcome to SmartNutri</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="profile_name">Im Yoona</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_facebook_login">Facebook</string>
    <string name="btn_google_login">Google</string>
    <string name="menu_title">Menu Title</string>
    <string name="menu_desc">This is menu description by default</string>
    <string name="menu_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi fuga neque, odit officia porro qui reprehenderit sequi temporibus! A culpa harum impedit mollitia, nemo nisi nobis nostrum omnis pariatur voluptatem.</string>
    <string name="menu_calorie">400 cal</string>
    <string name="menu_cooking_instruction">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad architecto at, autem consequatur ea eaque, enim ipsam ipsum laborum nemo neque provident quas, quasi repellat. Ea nostrum praesentium reiciendis?</string>
    <string name="fragment_menu_list_title">Daftar Menu Makanan</string>
    <string name="detail_menu_title">Detail Menu</string>
    <string name="menu_content_description">Picture of Menu</string>
    <string name="btn_consultation">Start Consultation</string>
    <string name="tips_title">Tips Untuk Ibu</string>
    <string name="tips_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias aliquid autem cupiditate dolore facere facilis fugit magnam maiores, modi natus necessitatibus omnis perferendis praesentium repellat sequi unde voluptates voluptatum.</string>
    <string name="help_title">Help</string>
    <string name="help_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consectetur ea earum fugit ipsa magni repellat tempora vel velit, veniam. Aliquam autem cum dolorem, excepturi explicabo maxime officia qui tempora!</string>
    <string name="yourCalorieNeedToday">Kebutuhan Kalori Anda Hari Ini</string>
    <string name="calorieNeed">2500 Kalori</string>
    <string name="_650_kkal">650 KKal</string>
    <string name="calorie">Calorie:</string>
    <string name="nutrition">Nutrition</string>
    <string name="carbohydrate">Carbohydrate:</string>
    <string name="protein">Protein:</string>
    <string name="fat">Fat:</string>
    <string name="description">Description</string>
    <string name="ingredient">Ingredient</string>
</resources>
