<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/md_keyline">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/list_image"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:scaleType="centerCrop"
        tools:src="@drawable/vegan_tofu_tacos"/>

    <TextView
        android:id="@+id/list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/list_image"
        android:layout_marginLeft="@dimen/md_keyline"
        tools:text="@string/menu_title"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/article_subheading"/>

    <TextView
        android:id="@+id/list_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_title"
        android:layout_toRightOf="@+id/list_image"
        android:layout_marginLeft="@dimen/md_keyline"
        android:textColor="@color/grey"
        android:textSize="@dimen/list_body"
        android:textAppearance="?attr/textAppearanceListItem"
        android:ellipsize="end"
        android:singleLine="true"
        tools:text="@string/menu_desc"/>


    <TextView
        android:id="@+id/list_calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:textAppearance="?attr/textAppearanceListItem"
        android:text="@string/_650_kkal"/>

</RelativeLayout>