<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/article_keylines"
            app:expandedTitleMarginStart="@dimen/md_keyline"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="@drawable/cake"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/md_keyline"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/article_title"
                android:layout_marginBottom="@dimen/md_keyline"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_description"
                android:layout_marginBottom="@dimen/md_keyline"/>

            <RelativeLayout
                android:id="@+id/rlNutrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvNutrition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/nutrition"
                    android:textSize="@dimen/article_title"
                    android:layout_marginBottom="@dimen/md_keyline"/>

                <TextView
                    android:id="@+id/tvCalorie"
                    android:layout_below="@+id/tvNutrition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calorie"
                    android:layout_marginBottom="@dimen/md_keyline"/>

                <TextView
                    android:id="@+id/tvCarbohydrate"
                    android:layout_below="@+id/tvCalorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carbohydrate"
                    android:layout_marginBottom="@dimen/md_keyline"/>

                <TextView
                    android:id="@+id/tvProtein"
                    android:layout_below="@+id/tvCarbohydrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/protein"
                    android:layout_marginBottom="@dimen/md_keyline"/>

                <TextView
                    android:id="@+id/tvFat"
                    android:layout_below="@+id/tvProtein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    android:layout_marginBottom="@dimen/md_keyline"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvIngredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/ingredient"
                    android:textSize="@dimen/article_title"
                    android:layout_marginBottom="@dimen/md_keyline"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_below="@id/tvIngredient"
                    android:id="@+id/rvIngredientList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/article_title"
                android:text="How to cook"
                android:layout_marginBottom="@dimen/md_keyline"/>

            <TextView
                android:id="@+id/cooking_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_cooking_instruction"/>-->

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</android.support.design.widget.CoordinatorLayout>