<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEEEEE">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_accent"
                    android:drawableRight="@drawable/ic_email_black_24dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edittext_padding" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_login_email">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_accent"
                    android:drawableRight="@drawable/ic_lock_black_24dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:padding="@dimen/edittext_padding" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/colorPrimary"
                android:paddingBottom="@dimen/btn_padding_vertical"
                android:paddingLeft="@dimen/btn_padding_horizontal"
                android:paddingRight="@dimen/btn_padding_horizontal"
                android:paddingTop="@dimen/btn_padding_vertical"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/label_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_login_password" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Or"
                android:textSize="@dimen/label_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:paddingBottom="@dimen/btn_padding_vertical"
                android:paddingLeft="@dimen/btn_padding_horizontal"
                android:paddingRight="@dimen/btn_padding_horizontal"
                android:paddingTop="@dimen/btn_padding_vertical"
                android:text="@string/btn_signup"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/label_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/tv_login_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Login With"
                android:textSize="@dimen/label_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_signup" />


            <Button
                android:id="@+id/btn_facebook_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_facebookicon_24_black"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableTint="@color/colorPrimary"
                android:paddingBottom="@dimen/btn_padding_vertical"
                android:paddingLeft="@dimen/btn_padding_horizontal"
                android:paddingRight="@dimen/btn_padding_horizontal"
                android:paddingTop="@dimen/btn_padding_vertical"
                android:text="@string/btn_facebook_login"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/btn_google_login"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_with" />

            <Button
                android:id="@+id/btn_google_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_gplus_24dp_black"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableTint="@color/gplus_coor"
                android:paddingBottom="@dimen/btn_padding_vertical"
                android:paddingLeft="@dimen/btn_padding_horizontal"
                android:paddingRight="@dimen/btn_padding_horizontal"
                android:paddingTop="@dimen/btn_padding_vertical"
                android:text="@string/btn_google_login"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_facebook_login"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_with" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</android.support.design.widget.CoordinatorLayout>